--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,7 +7,6 @@
     "com.unity.animation.rigging": "1.3.0",
     "com.unity.burst": "1.8.19",
     "com.unity.cloud.gltfast": "6.10.3",
-    "com.unity.collab-proxy": "2.7.1",
     "com.unity.device-simulator.devices": "1.0.0",
     "com.unity.editorcoroutines": "1.0.0",
     "com.unity.ext.nunit": "2.0.5",
@@ -18,6 +17,7 @@
     "com.unity.mathematics": "1.3.2",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "com.unity.performance.profile-analyzer": "1.2.3",
     "com.unity.render-pipelines.universal": "17.0.4",
     "com.unity.settings-manager": "2.1.0",
     "com.unity.test-framework": "1.5.1",
